# nodejs-sqlite3

./: readme.md
nodejs-sqlite/: .node.swp  db_config.js  insert.js  insert_multi.js  readme.md  select.js
nodejs-sqlite/db/: playlist.db
sqlite3/: README.md  data-sensor.db
sqlite3/[1]Basic/: BASIC.md  CMakeLists.txt
sqlite3/[1]Basic/src/: main.cpp
